--- a/ansible/scripts/params.yml
+++ b/ansible/scripts/params.yml
@@ -1,2 +1,3 @@
 COM_RCL_EXCEPT: 6 # don't freak out when there is an RC Loss if offboard
-MAV_SYS_ID: {{ drone_num }} 
+MAV_SYS_ID: {{ drone_num }}
+MIS_TAKEOFF_ALT: 1.0 
