--- a/ansible/tasks/download-ros.yml
+++ b/ansible/tasks/download-ros.yml
@@ -7,5 +7,9 @@
       - ros-humble-mavros-extras
       - ros-humble-rosbag2-storage-mcap
       - ros-humble-domain-bridge
+      - ros-humble-image-transport
+      - ros-humble-compressed-image-transport
+      - ros-humble-theora-image-transport
+      - ros-humble-cv-bridge
     update_cache: true
     state: latest
