--- a/ansible/drones_update.yml
+++ b/ansible/drones_update.yml
@@ -79,7 +79,7 @@
           ansible.builtin.git: 
               repo: https://github.com/lis-epfl/swarm-nxt
               dest: "{{ drone_base_path }}/repos/swarm-nxt"
-              version: devel
+              version: integrate-hdsm
               force: yes
           
         - name: List ros_packages directories
@@ -121,10 +121,12 @@
       ansible.builtin.shell: |
         source /home/lis/.bashrc && \
         . /opt/ros/humble/setup.sh && \
+        colcon build --base-paths multi_agent_pkgs --packages-select multi_agent_planner_msgs && \
+        . install/setup.sh && \
         colcon build --base-paths src && \
         colcon build --base-paths multi_agent_pkgs --packages-select jps3d decomp_util convex_decomp_util path_finding_util voxel_grid_util decomp_ros_msgs decomp_ros_utils && \
         . install/setup.sh && \
-        colcon build --base-paths multi_agent_pkgs --packages-select env_builder_msgs env_builder mapping_util multi_agent_planner_msgs multi_agent_planner
+        colcon build --base-paths multi_agent_pkgs --packages-select env_builder_msgs env_builder mapping_util multi_agent_planner
         
       args:
         chdir: "{{ drone_ros_path }}"
