--- a/ansible/drones_update.yml
+++ b/ansible/drones_update.yml
@@ -117,17 +117,14 @@
         - "{{ drone_ros_path }}/install"
 
 
-    - name: Build ros packages
-      ansible.builtin.shell: |
-        source /home/lis/.bashrc && \
-        . /opt/ros/humble/setup.sh && \
-        colcon build --base-paths multi_agent_pkgs --packages-select multi_agent_planner_msgs && \
-        . install/setup.sh && \
-        colcon build --base-paths src && \
-        colcon build --base-paths multi_agent_pkgs --packages-select jps3d decomp_util convex_decomp_util path_finding_util voxel_grid_util decomp_ros_msgs decomp_ros_utils && \
-        . install/setup.sh && \
-        colcon build --base-paths multi_agent_pkgs --packages-select env_builder_msgs env_builder mapping_util multi_agent_planner
-        
+    - name: Copy drone build script
+      ansible.builtin.template:
+        src: templates/drone_build.sh
+        dest: "{{ drone_ros_path }}/drone_build.sh"
+        mode: "755"
+
+    - name: Execute drone build script
+      ansible.builtin.shell: ./drone_build.sh
       args:
         chdir: "{{ drone_ros_path }}"
         executable: /bin/bash
