--- a/ros_packages/goal_giver_ros2/package.xml
+++ b/ros_packages/goal_giver_ros2/package.xml
@@ -1,7 +1,7 @@
 <package format="2">
-  <name>drone_state_manager_ros2</name>
+  <name>goal_giver_ros2</name>
   <version>0.0.1</version>
-  <description>A ROS2 package for managing the state of drones.</description>
+  <description>A ROS2 package for sending goals to drones.</description>
   <maintainer email="your_email@example.com">Your Name</maintainer>
   <license>MIT</license>
   
