--- a/ros_packages/drone_planner_ros2/CMakeLists.txt
+++ b/ros_packages/drone_planner_ros2/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(px4_ros_com REQUIRED)
+find_package(px4_msgs REQUIRED)
 find_package(eigen3_cmake_module REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
@@ -23,6 +24,7 @@ set(DEPENDENCIES
   sensor_msgs
   nav_msgs
   px4_ros_com
+  px4_msgs
   Eigen3
   tf2_geometry_msgs
 )
