--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -114,6 +114,8 @@
         - { src: "templates/bounds.json", dest: "{{ drone_ros_path }}/config/bounds.json"}
         - { src: "templates/drone_launch.py.j2", dest: "{{ drone_base_path }}/launch.py"}
         - { src: "templates/ros_packages_service.j2", dest: "~/.local/share/systemd/user/ros_packages.service"}
+        - { src: "templates/micro_xrce_service.j2", dest: "~/.local/share/systemd/user/micro_xrce.service"}
+
       vars:
         peers: "{{ groups['drones'] | map('regex_replace', '\\.local$', '') | join('\n') }}"
         ros_path: "{{ drone_ros_path }}"
@@ -145,7 +147,14 @@
           register: chronyc_check
           changed_when: false
 
-
+    - name: Start & Enable MicroXRCE service
+      ansible.builtin.systemd:
+        name: "micro_xrce"
+        state: started
+        enabled: true
+        scope: user
+        daemon_reload: true
+        
     - name: Start ros_packages service
       ansible.builtin.systemd: 
         name: ros_packages
