--- a/ansible/drones_update.yml
+++ b/ansible/drones_update.yml
@@ -48,12 +48,10 @@
     
     - name: Get HDSM package
       ansible.builtin.git: 
-        repo: git@github.com:ctoumieh/multi_agent_pkgs/
+        repo: https://github.com/ctoumieh/multi_agent_pkgs/
         dest: "{{ drone_ros_path }}/multi_agent_pkgs"
-        key_file: /tmp/git_key
-        force: yes
-        accept_hostkey: yes
         version: niel/chill-dynamics
+        force: yes
 
         
     - name: SwarmNXT Nodes
